Prevent the warehouse create dialog from collapsing in Firefox when opened from project pages.

--- a/mds-ui/src/app/features/warehouses/warehouse-form/warehouse-form.component.scss
+++ b/mds-ui/src/app/features/warehouses/warehouse-form/warehouse-form.component.scss
@@ -1,3 +1,8 @@
+:host {
+  display: block;
+  width: 100%;
+}
+
 .warehouse-form__header {
   display: flex;
   align-items: flex-start;
